# Project_1_431

./: Dockerfile  README.md  docker-compose.yml  kanpilot.toml
_build/: log
calculator/: Dockerfile  calculator.opam  docker-compose.yml  dune-project
calculator/_build/: .db  .digest-db  log
calculator/_build/default/: calculator.dune-package  calculator.install  dune-project
calculator/_build/default/.dune/: configurator  configurator.v2
calculator/_build/default/lib/: calculator.cma  calculator.cmxa  calculator.cmxs  calculator.ml-gen
calculator/_build/default/lib/.calculator.objs/: calculator__Main.impl.d
calculator/_build/default/lib/.calculator.objs/byte/: calculator.cmi  calculator.cmo  calculator.cmt
calculator/_build/default/lib/.calculator.objs/native/: calculator.cmx
calculator/_build/default/lib/.merlin-conf/: lib-calculator
calculator/_build/default/test/: calculator.bc
calculator/_build/default/test/.calculator.eobjs/byte/: dune__exe__Calculator.cmi  dune__exe__Calculator.cmo  dune__exe__Calculator.cmt
calculator/_build/default/test/.calculator.eobjs/native/: dune__exe__Calculator.cmx
calculator/_build/default/test/.merlin-conf/: exe-calculator  exe-test_calculator
calculator/_build/default/test/.test_calculator.eobjs/byte/: dune__exe__Test_calculator.cmti
calculator/css/: styles.css
calculator/lib/: calculator.ml  css.ml  dune  layout.ml  main.ml  styles.css
calculator/test/: dune
